Made working toggle-able animated header - However, I need to fix how the header offsets the pages - This can be done by using display: none on the header wrapper, but this will eliminate the animation. - Therefore, I will need to remove the animated header element from the wrapper in order to be visible even when header is changed to display:none

--- a/src/css/contactUs.css
+++ b/src/css/contactUs.css
@@ -77,7 +77,7 @@
 
 #second-content-wrapper {
     flex-grow:2;
-    background-color:red;
+    background-color:rgb(231, 231, 231);
     height:100%;
 
     display:flex;
