--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -22,6 +22,8 @@
 #menu-row-two {
     display:flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #ramen-original-image {
@@ -42,11 +44,11 @@
 
     justify-items: center;
     margin: 0 15px !important;
-    row-gap:30px;
+    row-gap:35px;
     column-gap: 10px;
 
     max-width:850px;
-    margin: 20px auto !important;
+    margin: 20px auto 50px auto !important;
 }
 
 #ramen-image-2 {
